Rename project from 7Zip to SevenZip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,17 @@ cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
-project(7Zip VERSION 21.7.0 LANGUAGES C)
+project(SevenZip VERSION 21.7.0 LANGUAGES C)
 
 include(SourceFiles)
 
-list(TRANSFORM 7ZIP_C_SOURCE_FILES PREPEND "C/")
-set(7ZIP_ALL_SOURCE_FILES ${7ZIP_C_SOURCE_FILES})
+list(TRANSFORM SEVEN_ZIP_C_SOURCE_FILES PREPEND "C/")
+set(SEVEN_ZIP_ALL_SOURCE_FILES ${SEVEN_ZIP_C_SOURCE_FILES})
 
-set(7ZIP_ALL_HEADER_FILES ${7ZIP_ALL_SOURCE_FILES})
-list(FILTER 7ZIP_ALL_HEADER_FILES INCLUDE REGEX ".*\\.h$")
+set(SEVEN_ZIP_ALL_HEADER_FILES ${SEVEN_ZIP_ALL_SOURCE_FILES})
+list(FILTER SEVEN_ZIP_ALL_HEADER_FILES INCLUDE REGEX ".*\\.h$")
 
-add_library(${PROJECT_NAME} STATIC ${7ZIP_ALL_SOURCE_FILES})
+add_library(${PROJECT_NAME} STATIC ${SEVEN_ZIP_ALL_SOURCE_FILES})
 
 include(GNUInstallDirs)
 
@@ -44,7 +44,7 @@ install(
 	INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
 )
 
-foreach(_HEADER_FILE ${7ZIP_ALL_HEADER_FILES})
+foreach(_HEADER_FILE ${SEVEN_ZIP_ALL_HEADER_FILES})
 	string(REGEX MATCH ".*[/\\]" _HEADER_DIRECTORY_PATH ${_HEADER_FILE})
 	install(FILES ${_HEADER_FILE} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/${_HEADER_DIRECTORY_PATH})
 endforeach()
