--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19 FATAL_ERROR)
 
-option(BUILD_CPP_LIB "Build and install the C++ 7-Zip library." OFF)
+option(BUILD_CPP_LIB "Build and install the C++ 7-Zip library." ON)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
@@ -23,6 +23,12 @@ set(SEVEN_ZIP_ALL_SOURCE_FILES ${SEVEN_ZIP_C_SOURCE_FILES} ${SEVEN_ZIP_CPP_SOURC
 set(SEVEN_ZIP_ALL_HEADER_FILES ${SEVEN_ZIP_C_HEADER_FILES} ${SEVEN_ZIP_CPP_HEADER_FILES})
 
 add_library(${PROJECT_NAME} STATIC ${SEVEN_ZIP_C_SOURCE_FILES})
+
+target_include_directories(${PROJECT_NAME}
+	PUBLIC
+		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+		$<INSTALL_INTERFACE:>
+)
 
 if(BUILD_CPP_LIB)
 	add_library(${PROJECT_NAME_CPP} STATIC ${SEVEN_ZIP_CPP_SOURCE_FILES})
